[package]
name = "async-reify-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Attribute proc macros for async-reify (e.g. #[trace_async])"
keywords = ["proc-macro", "async", "tracing", "reify"]
categories = ["development-tools::procedural-macro-helpers", "asynchronous"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full", "visit-mut", "extra-traits"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
async-reify = { workspace = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
tokio-test = "0.4"
