[package]
name = "const-reify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Safe runtime-to-const-generic dispatch via match tables"
keywords = ["const-generics", "reify", "dispatch", "type-level", "reflection"]
categories = ["rust-patterns"]

[dependencies]
