[package]
name = "context-trait"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Runtime-synthesized trait instances scoped to callbacks"
keywords = ["trait", "context", "scoped", "reflection", "reify"]
categories = ["rust-patterns"]

[dependencies]
