[package]
name = "reflect-derive"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Derive macro for #[derive(Reflect)]"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
reflect-core = { path = "../reflect-core" }
reflect-nat = { path = "../reflect-nat" }
