[package]
name = "reflect-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Derive macro for #[derive(Reflect)]"
keywords = ["proc-macro", "derive", "reflection", "reify"]
categories = ["development-tools::procedural-macro-helpers", "rust-patterns"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

[dev-dependencies]
reify-reflect-core = { workspace = true }
reflect-nat = { workspace = true }
