[package]
name = "reflect-nat"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Type-level naturals, booleans, and HLists with Reflect implementations"

[dependencies]
reify-reflect-core = { path = "../reify-reflect-core" }
typenum = { version = "1", optional = true }
frunk = { version = "0.4", optional = true }

[features]
default = []
typenum = ["dep:typenum"]
frunk = ["dep:frunk"]
