[package]
name = "reflect-nat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Type-level naturals, booleans, and HLists with Reflect implementations"
keywords = ["type-level", "peano", "naturals", "hlist", "reflection"]
categories = ["rust-patterns", "data-structures"]

[dependencies]
reify-reflect-core = { workspace = true }
typenum = { version = "1", optional = true }
frunk = { version = "0.4", optional = true }

[features]
default = []
typenum = ["dep:typenum"]
frunk = ["dep:frunk"]
