[package]
name = "reify-graph"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Safe Rc/Arc graph reification and reconstruction"

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
