[package]
name = "reify-graph"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description = "Safe Rc/Arc graph reification and reconstruction"
keywords = ["graph", "reflection", "reify", "rc", "arc"]
categories = ["data-structures", "rust-patterns"]

[dependencies]
serde = { workspace = true, optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = []
